Se agrega la estructura basica del sitio

--- a/index.html
+++ b/index.html
@@ -24,9 +24,31 @@
         </nav>
       </div>
     </header>
-    <section>sección principal</section>
-    <section>sección portafolio</section>
-    <section>sección eventos</section>
+    <section>
+      <h1>Hola! soy <strong>Fernando Reyes</strong>  Desarollador <br/> <strong>Frontend</strong> con <br/> pasión por la <strong>enseñanza</strong> </h1>
+      <img> Imagen de portada
+    </section>
+    <section>
+      <h2>Portafolio (Proyectos Destacados)</h2>
+      <article>
+        <h3>Codellege</h3>
+        <h6>HTML / CSS / Javascript</h6>
+        <p><small><strong>Fecha:</strong> enero / 2020</small></p>
+        <p><small><strong>Puedes verlo en:</strong> www.codellege.com</small></p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In dolore corrupti, magnam porro dolor vitae provident fugit reprehenderit adipisci labore qui earum, blanditiis corporis est? Reprehenderit iusto veniam ipsum distinctio. </p>
+      </article>
+    </section>
+    <section>
+      <h2>Más sobre mi experiencia</h2>
+      <article>
+        <figure>
+          <img/>
+        </figure>
+        <h3>Curso Cosmic Funtion Points</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus in ipsa repellendus labore modi excepturi neque saepe. Laborum modi voluptas animi facere labore libero. Odio maxime assumenda facere velit blanditiis.</p>
+        <a>Aprender de Cosmic</a>
+      </article>
+    </section>
     <section>sección contacto</section>
     <footer>footer</footer>
   </body>
