--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
+    <meta charset="UTF-8"/>
     <title>Fernando Reyes</title>
   </head>
   <body>
     <header>
       <div>
         <figure>
-          <img> logo
+          <img src="images/FERA_logo.png" alt="Logo de http://www.ferchoreya.com">
         </figure>
         <nav>
           <ol>
             <li>
-              <a>Portafolio</a>
+              <a href="#">Portafolio</a>
             </li>
             <li>
-              <a>Experiencia</a>
+              <a href="#">Experiencia</a>
             </li>
             <li>
-              <a>Trabajemos juntos</a>
+              <a href="#">Trabajemos juntos</a>
             </li>
           </ol>
         </nav>
@@ -26,7 +27,7 @@
     </header>
     <section>
       <h1>Hola! soy <strong>Fernando Reyes</strong>  Desarollador <br/> <strong>Frontend</strong> con <br/> pasión por la <strong>enseñanza</strong> </h1>
-      <img> Imagen de portada
+      <img src="images/fondo-codigo.jpg" alt="Imagen de portada" width="500" height="300">
     </section>
     <section>
       <h2>Portafolio (Proyectos Destacados)</h2>
@@ -36,13 +37,14 @@
         <p><small><strong>Fecha:</strong> enero / 2020</small></p>
         <p><small><strong>Puedes verlo en:</strong> www.codellege.com</small></p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In dolore corrupti, magnam porro dolor vitae provident fugit reprehenderit adipisci labore qui earum, blanditiis corporis est? Reprehenderit iusto veniam ipsum distinctio. </p>
+        <img src="images/codellege_portafolio.jpg" alt="Codellege" width="500">
       </article>
     </section>
     <section>
       <h2>Más sobre mi experiencia</h2>
       <article>
         <figure>
-          <img/>
+          <img src="images/curso_cosmic.png" alt="Curso Cosmic" width="500">
         </figure>
         <h3>Curso Cosmic Funtion Points</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus in ipsa repellendus labore modi excepturi neque saepe. Laborum modi voluptas animi facere labore libero. Odio maxime assumenda facere velit blanditiis.</p>
