Se agrega navegacion entre secciones del sitio

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <nav>
           <ol>
             <li>
-              <a href="#">Portafolio</a>
+              <a href="#portafolio">Portafolio</a>
             </li>
             <li>
-              <a href="#">Experiencia</a>
+              <a href="#cursos">Experiencia</a>
             </li>
             <li>
-              <a href="#">Trabajemos juntos</a>
+              <a href="#contacto">Trabajemos juntos</a>
             </li>
           </ol>
         </nav>
@@ -29,18 +29,19 @@
       <h1>Hola! soy <strong>Fernando Reyes</strong>  Desarollador <br/> <strong>Frontend</strong> con <br/> pasión por la <strong>enseñanza</strong> </h1>
       <img src="images/fondo-codigo.jpg" alt="Imagen de portada" width="500" height="300">
     </section>
-    <section>
+    <section id="portafolio">
       <h2>Portafolio (Proyectos Destacados)</h2>
       <article>
-        <h3>Codellege</h3>
+        <h3>Maestro Codellege</h3>
         <h6>HTML / CSS / Javascript</h6>
         <p><small><strong>Fecha:</strong> enero / 2020</small></p>
         <p><small><strong>Puedes verlo en:</strong> www.codellege.com</small></p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In dolore corrupti, magnam porro dolor vitae provident fugit reprehenderit adipisci labore qui earum, blanditiis corporis est? Reprehenderit iusto veniam ipsum distinctio. </p>
-        <img src="images/codellege_portafolio.jpg" alt="Codellege" width="500">
+        <img src="images/codellege_portafolio.jpg" alt="Codellege" width="500"><br/>
+        <a href="https://youtu.be/9mZoqxQB8d0" target="_blank">Aprender sobre Codellege</a>
       </article>
     </section>
-    <section>
+    <section id="cursos">
       <h2>Más sobre mi experiencia</h2>
       <article>
         <figure>
@@ -51,7 +52,13 @@
         <a>Aprender de Cosmic</a>
       </article>
     </section>
-    <section>sección contacto</section>
+    <section id="contacto">
+      <form action="/suscripcion">
+        <h3>¿Creamos algo juntos?</h3>
+        <input type="text" placeholder="Déjame tu email">
+        <button>Enviar</button>
+      </form>
+    </section>
     <footer>footer</footer>
   </body>
 </html>
