Se agrego el manejo de prioridades de estilos

--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
   <head>
     <meta charset="UTF-8"/>
     <title>Fernando Reyes</title>
+    <!-- Estilos enlazando archivos css 3a prioridad-->
+    <link rel="stylesheet" href="css/estilos.css"/>
+    <!--Estilos TAG Style 2da prioridad-->
+    <!--style>
+      header {
+        background-color: aquamarine;
+      }
+    </style-->
+    
   </head>
   <body>
-    <header>
+    <!--Estilos en linea 1era prioridad-->
+    <!--header style="background-color: lightslategrey; color: aquamarine;"-->
+    <header >
       <div>
         <figure>
           <img src="images/FERA_logo.png" alt="Logo de http://www.ferchoreya.com">
