--- a/index.html
+++ b/index.html
@@ -16,60 +16,62 @@
   <body>
     <!--Estilos en linea 1era prioridad-->
     <!--header style="background-color: lightslategrey; color: aquamarine;"-->
-    <header >
+    <header class="header" >
       <div>
-        <figure>
+        <figure class="logo">
           <img src="images/FERA_logo.png" alt="Logo de http://www.ferchoreya.com">
         </figure>
-        <nav>
+        <nav class="menu">
           <ol>
             <li>
-              <a href="#portafolio">Portafolio</a>
+              <a href="#portafolio" class="link">Portafolio</a>
             </li>
             <li>
-              <a href="#cursos">Experiencia</a>
+              <a href="#cursos" class="link">Experiencia</a>
             </li>
             <li>
-              <a href="#contacto">Trabajemos juntos</a>
+              <a href="#contacto" class="link">Trabajemos juntos</a>
             </li>
           </ol>
         </nav>
       </div>
     </header>
-    <section>
+    <section class="hero">
       <h1>Hola! soy <strong>Fernando Reyes</strong>  Desarollador <br/> <strong>Frontend</strong> con <br/> pasión por la <strong>enseñanza</strong> </h1>
       <img src="images/fondo-codigo.jpg" alt="Imagen de portada" width="500" height="300">
     </section>
-    <section id="portafolio">
+    <section id="portafolio" class="portfolio">
       <h2>Portafolio (Proyectos Destacados)</h2>
-      <article>
-        <h3>Maestro Codellege</h3>
-        <h6>HTML / CSS / Javascript</h6>
-        <p><small><strong>Fecha:</strong> enero / 2020</small></p>
-        <p><small><strong>Puedes verlo en:</strong> www.codellege.com</small></p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In dolore corrupti, magnam porro dolor vitae provident fugit reprehenderit adipisci labore qui earum, blanditiis corporis est? Reprehenderit iusto veniam ipsum distinctio. </p>
-        <img src="images/codellege_portafolio.jpg" alt="Codellege" width="500"><br/>
+      <article class="project">
+        <h3 class="project-title">Maestro Codellege</h3>
+        <h6 class="project-course">HTML / CSS / Javascript</h6>
+        <p class="project-date"><small><strong>Fecha:</strong> enero / 2020</small></p>
+        <p class="project-url"><small><strong>Puedes verlo en:</strong> www.codellege.com</small></p>
+        <p class="project-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. In dolore corrupti, magnam porro dolor vitae provident fugit reprehenderit adipisci labore qui earum, blanditiis corporis est? Reprehenderit iusto veniam ipsum distinctio. </p>
+        <figure class="project-imageContainer">
+          <img class="project-image" src="images/codellege_portafolio.jpg" alt="Codellege" width="500"><br/>
+        </figure>
         <a href="https://youtu.be/9mZoqxQB8d0" target="_blank">Aprender sobre Codellege</a>
       </article>
     </section>
     <section id="cursos">
       <h2>Más sobre mi experiencia</h2>
-      <article>
-        <figure>
-          <img src="images/curso_cosmic.png" alt="Curso Cosmic" width="500">
+      <article class="event">
+        <figure class="event-imageContainer">
+          <img class="event-image" src="images/curso_cosmic.png" alt="Curso Cosmic" width="500">
         </figure>
-        <h3>Curso Cosmic Funtion Points</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus in ipsa repellendus labore modi excepturi neque saepe. Laborum modi voluptas animi facere labore libero. Odio maxime assumenda facere velit blanditiis.</p>
-        <a>Aprender de Cosmic</a>
+        <h3 class="event-title">Curso Cosmic Funtion Points</h3>
+        <p class="event-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus in ipsa repellendus labore modi excepturi neque saepe. Laborum modi voluptas animi facere labore libero. Odio maxime assumenda facere velit blanditiis.</p>
+        <a class="event-url">Aprender de Cosmic</a>
       </article>
     </section>
-    <section id="contacto">
-      <form action="/suscripcion">
+    <section id="contacto" class="contact">
+      <form action="/suscripcion" class="form-email">
         <h3>¿Creamos algo juntos?</h3>
         <input type="text" placeholder="Déjame tu email">
         <button>Enviar</button>
       </form>
     </section>
-    <footer>footer</footer>
+    <footer class="footer">footer</footer>
   </body>
 </html>
